--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -212,8 +212,10 @@
 \section*{Abkürzungsverzeichnis}
 \phantomsection
 \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
-\begin{acronym}[DAO]
+\begin{acronym}[SOAP]
 	\acro{DAO}{Data Access Object}
+	\acro{REST}{Representational State Transfer}
+	\acro{SOAP}{Simple Object Access Protocol}
 \end{acronym}
 \newpage
 
