ER-Diagramm: Quantitäten (1:n)

--- a/Documentation/Report/Pictures/ERDiagram.tex
+++ b/Documentation/Report/Pictures/ERDiagram.tex
@@ -21,8 +21,8 @@
 		\node[attribute] (Customer1) [above=of Customer] {authenticated} edge (Customer);
 		
 		% Address
-		\node[relationship] (livesAt) [below left=of Customer] {lives at} edge (Customer);
-		\node[entity] (Address) [below left=of livesAt] {Address} edge (livesAt);
+		\node[relationship] (livesAt) [below left=of Customer] {lives at} edge node[cty] {1} (Customer);
+		\node[entity] (Address) [below left=of livesAt] {Address} edge node[cty] {1} (livesAt);
 		\node[attribute] (Address1) [left=of Address] {street} edge (Address);
 		\node[attribute] (Address2) [right=of Address] {houseNr} edge (Address);
 		\node[attribute] (Address3) [below=of Address] {postalCode} edge (Address);
@@ -30,39 +30,39 @@
 		\node[attribute] (Address5) [above left=of Address] {coordinates} edge (Address);
 		
 		% Branch
-		\node[relationship] (Located) [below left=1cm and 1.5cm of Address] {located at} edge (Address);
-		\node[entity] (Branch) [below left=.5cm and 0.75cm of Located] {Branch} edge (Located);
+		\node[relationship] (Located) [below left=1cm and 1.5cm of Address] {location} edge node[cty] {1} (Address);
+		\node[entity] (Branch) [below left=.5cm and 0.75cm of Located] {Branch} edge node[cty] {1} (Located);
 		\node[attribute] (Branch1) [below=of Branch] {name} edge (Branch);
 		\node[attribute] (Branch2) [above left=of Branch] {bic} edge (Branch);
 		\node[attribute] (Branch3) [below left=of Branch] {openHours} edge (Branch);
 		\node[attribute] (Branch4) [left=of Branch] {phoneNumber} edge (Branch);
-		\node[relationship] (leads) [above=4cm of Branch] {leads} edge (Branch) edge (Consultant);
+		\node[relationship] (leads) [above=4cm of Branch] {leads} edge node[cty, swap] {1} (Branch) edge node[cty] {n} (Consultant);
 		
 		% Account
-		\node[relationship] (owns) [below=2cm of Customer] {owns} edge (Customer);
-		\node[entity] (Account) [below=2cm of owns] {Account} edge (owns);
+		\node[relationship] (owns) [below=2cm of Customer] {owns} edge node[cty] {n} (Customer);
+		\node[entity] (Account) [below=2cm of owns] {Account} edge node[cty] {1} (owns);
 		\node[attribute] (Acc1) [above left=.3cm and 1cm of Account] {balance} edge (Account);
 		\node[attribute] (Acc2) [above right=-.2cm and 1cm of Account] {accountNr} edge (Account);
 		\node[attribute] (Acc3) [below right=-.5cm and 1cm of Account] {description} edge (Account);
 		\node[attribute] (Acc4) [below left=-.5cm and 1cm of Account] {overDraft} edge (Account);
 		
 		% Transaction
-		\node[relationship] (recipient) [below left=1cm and .5cm of Account] {recipient} edge (Account);
-		\node[relationship] (sender) [below right=1cm and .5cm of Account] {sender} edge (Account);
-		\node[entity] (Transaction) [below right=1cm and .5cm of recipient] {Transaction} edge (recipient) edge (sender);
+		\node[relationship] (recipient) [below left=1cm and .5cm of Account] {recipient} edge node[cty, swap] {n} (Account);
+		\node[relationship] (sender) [below right=1cm and .5cm of Account] {sender} edge node[cty] {n} (Account);
+		\node[entity] (Transaction) [below right=1cm and .5cm of recipient] {Transaction} edge node[cty, swap] {1} (recipient) edge node[cty] {1} (sender);
 		\node[attribute] (Transaction1) [below=of Transaction] {amount} edge (Transaction);
 		\node[attribute] (Transaction2) [right=of Transaction] {date} edge (Transaction);
 		
 		% OpenHour
-		\node[relationship] (opens) [below right=.2cm and 1.5cm of Branch] {opens} edge (Branch);
-		\node[entity] (OpenHour) [below right=.2cm and 1.5cm of opens] {OpenHour} edge (opens);
+		\node[relationship] (opens) [below right=.2cm and 1.5cm of Branch] {opens} edge node[cty] {n} (Branch);
+		\node[entity] (OpenHour) [below right=.2cm and 1.5cm of opens] {OpenHour} edge node[cty] {1} (opens);
 		\node[attribute] (OpenHour1) [below left=of OpenHour] {openingTime} edge (OpenHour);
 		\node[attribute] (OpenHour2) [below=of OpenHour] {closingTime} edge (OpenHour);
 		\node[attribute] (OpenHour3) [below right=of OpenHour] {weekDay} edge (OpenHour);
 		
 		% Message
-		\node[relationship] (inbox) [below right=.5cm and .5cm of Customer] {inbox} edge (Customer);
-		\node[entity] (Message) [below right=.5cm and .5cm of inbox] {Message} edge (inbox);
+		\node[relationship] (inbox) [below right=.5cm and .5cm of Customer] {inbox} edge node[cty] {n} (Customer);
+		\node[entity] (Message) [below right=.5cm and .5cm of inbox] {Message} edge node[cty] {1} (inbox);
 		\node[attribute] (Message1) [below right=of Message] {description} edge (Message);
 		\node[attribute] (Message2) [below left=.8cm of Message] {content} edge (Message);
 		\node[attribute] (Message3) [above right=of Message] {sender} edge (Message);
