--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -39,6 +39,7 @@
                                draw=black!50, node distance=1cm, drop shadow]
 \tikzstyle{every relationship} = [top color=white, bottom color=red!20, 
                                   draw=red!50!black!100, drop shadow, font=\sffamily\itshape]
+\tikzstyle{cty} = [auto, font=\sffamily\footnotesize]
 \tikzstyle{every isa} = [top color=white, bottom color=green!20, 
                          draw=green!50!black!100, drop shadow]
                          
