--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -194,8 +194,8 @@
 %===============================================================================
 % Parts
 %===============================================================================
-\input{Parts/Vision}
-\input{Parts/Kontext}
+\input{Parts/Einleitung}
+\input{Parts/Idee}
 \input{Parts/Konzept}
 \input{Parts/Vorgehen}
 \input{Parts/Design}
