--- a/Documentation/Report/Parts/Idee.tex
+++ b/Documentation/Report/Parts/Idee.tex
@@ -1,5 +1,18 @@
 \authoredSection{michael}{App-Idee}
 
+\subsection{Problematik}
+Mit Rücksicht auf oben genannte Aspekte haben wir in der Ideenfindungsphase auf Lokalität als entscheidendes Schlagwort konzentriert. Apps wie etwa foursquare (Quelle?), welche Bezug auf lokale Unternehmen nehmen und Benutzern die Möglichkeit geben, sich darüber auszutauschen, sind beispielhaft für die erfolgreiche Umsetzung dieses Konzepts. Für das Bankgeschäft ergab sich jedoch das Problem, dass die eigenen finanziellen Verhältnisse in den innersten persönlichen Lebensbereich fallen und in der Regel darüber zumindest weniger Austausch stattfindet als über Restaurants, Nachtclubs oder Freizeitaktivitäten. So erschien es uns nachvollziehbar, dass die App eine Interaktion zwischen einem Kunden und einer Filiale begünstigen soll, nicht aber den Austausch zwischen mehreren Kunden - der dann ohnehin wieder kaum eine Filiale benötigen würde.
+
+Erste Überlegungen zielten in Richtung interaktiver Hilfedienstleistungen, welche jederzeit über Videotelefonie Kontakt zum individuell vertrauten Berater einer bestimmten Filiale herstellen sollten. In den wöchentlichen Diskussionen im Projektplenum wurden uns aber Mängel aufgezeigt; der individuelle Berater ist kein Alleinstellungsmerkmal der Filialbank mehr, eine virtuelle Filiale ist ohne weiteres denkbar.
+
+Allerdings, und hier haben wir die Chance unserer App gesehen, heißt die technische Möglichkeit eines Vertriebsweges nicht gleich, dass dieser auch angenommen wird. Eine von uns im Sinne einer Markterkundung durchgeführte Umfrage ergab ein gewisses Misstrauen gegenüber der Idee, Finanztransaktionen per App durchzuführen. Gründe hierfür könnten vielfältig sein, beispielsweise könnten die befragten Studenten am Informatikcampus eine besondere Sensibilität bezüglich Aspekten des Datenschutzes und der Transaktionssicherheit haben. Eine von der Unternehmensberatung Bain and Company durchgeführte Studie zur Frage, wie digitalisierte Vertriebswege das Retailbanking zukünftigen prägen könnten, ergab einen ähnlichen Tenor.
+%(http://www.bain.de/Images/Retail_Banking_II_Digitalisierung_ES.pdf).
+
+ Insbesondere ergab die Studie, dass für Geldanlagen dem persönlichen Gespräch der Vorzug gegeben würde. Inwiefern eine solche Studie aussagekräftig für eine Banking-App der Zukunft ist, sei dahingestellt. Schließlich wäre es auch möglich, dass hier einfach noch keine Gewöhnung stattgefunden hat und die Studie nur einen Übergangseffekt widerspiegelt, der für eine langfristig strategische Ausrichtung irrelevant wäre.
+
+\subsection{Vision}
+
+
 Insofern haben wir uns nach einem Prozess von abwechselnden Gruppendiskussion und externen Feedback dazu entschlossen, diejenigen Features zu betonen, die Berater und Kunden möglichst in der Filiale zusammenbringen, aber auch unabhängig davon genutzt werden können. Auch Direktbanken versuchen inzwischen, anonyme Hotlines zu vermeiden und Kunden einzelnen Beratern zuzuordnen. In Kombination mit niedrigeren Gebühren, kostenlosen Kreditkarten und einfacher Kontoführung ist dies ein schwer zu schlagendes Angebot. Eine App, die Neukunden für eine Filalbank gewinnen soll, muss also einerseits eine ähnlich einfache Kontoverwaltung bieten, außerdem aber noch einen Mehrwert schaffen, der die höheren Gebühren einer Filialbank rechtfertigt.
 
 Ein weiterer, für die Akzeptanz einer App wichtiger Aspekt ist die (vielleicht auch nur vom Kunden gefühlte) Sicherheit. Eine von uns durchgeführte Umfrage unter Studenten technischer Fächer, primär Informatik, ergab, dass die meisten Teilnehmer unabhängig von der Funktionalität schon aus Sicherheitsgründen keine Bankgeschäfte mit einer App erledigen wollten. Die besondere Sensibilität der genannten Zielgruppe für Sicherheitsaspekte darf nicht außer Acht gelassen werden; dennoch ergab sich für uns die Frage, ob hier durch Interaktion in der Filiale nicht zugleich Kundenbindung und Vertrauen in die Sicherheit der Anwendung erhöht werden könnten. 
