--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -205,7 +205,7 @@
 \input{Parts/Qualitaetssicherung}
 \input{Parts/Fazit}
 \newpage
-\renewcommand{\currentAuthor}{kiba}
+\renewcommand{\currentAuthor}{black}
 
 %===============================================================================
 % Acronyms
@@ -218,7 +218,6 @@
 	\acro{REST}{Representational State Transfer}
 	\acro{SOAP}{Simple Object Access Protocol}
 \end{acronym}
-\newpage
 
 %===============================================================================
 % Figures
