--- a/Documentation/Report/Parts/Einleitung.tex
+++ b/Documentation/Report/Parts/Einleitung.tex
@@ -6,7 +6,7 @@ Zusätzlich wurden wir im Rahmen einer in das Projekt integrierten, einführende
 
 	Die unser Gruppe übertragene Aufgabe bestand darin, eine App zu entwickeln, welche die Bindung zwischen einer fiktiven Filialbank und ihren Kunden erhöht.
 	
-	 In den ersten Überlegungen wurde deutlich, dass nahezu jede Dienstleistung einer Filiale auf die ein oder andere Weise von Direktbanken abgebildet werden kann. Nicht umsonst ist das Filialgeschäft im Abschwung (etwa: http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html). Es erscheint insofern zunächst widersinnig, ein Geschäftsmodell, welches zunehmend effizient durch Softwareprodukte ersetzt wird und nur noch wenig profitabel ist, um jeden Preis erhalten zu wollen. Während nämlich auch im Bankgeschäft parallel zu sozialen Netzwerken Social-Banking-Konzepte erste Anwendung finden (http://www.visiblebanking.com/commbank-launches-first-social-banking-app-facebook-p2p-payments-7693/), haben diese nicht unmittelbar Bezug zum Filialgeschäft.
+	 In den ersten Überlegungen wurde deutlich, dass nahezu jede Dienstleistung einer Filiale auf die ein oder andere Weise von Direktbanken abgebildet werden kann. Nicht umsonst ist das Filialgeschäft im Abschwung \footnote{http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}. Es erscheint insofern zunächst widersinnig, ein Geschäftsmodell, welches zunehmend effizient durch Softwareprodukte ersetzt wird und nur noch wenig profitabel ist, um jeden Preis erhalten zu wollen. Während nämlich auch im Bankgeschäft parallel zu sozialen Netzwerken Social-Banking-Konzepte erste Anwendung finden \footnote{http://www.visiblebanking.com/commbank-launches-first-social-banking-app-facebook-p2p-payments-7693/}, haben diese nicht unmittelbar Bezug zum Filialgeschäft.
 	 
 	 Hier wurde uns bewusst, dass als Entwickler in Auftragsarbeit die eigenen Überlegungen hinsichtlich der Entwicklung eines Geschäftsfeldes oder Produktes zurückstehen müssen; viel mehr müssen innerhalb eines schwierigen Marktes Möglichkeiten gefunden werden, innerhalb der vorhandenen Strukturen zu innovieren.
 	 
