Bericht: Agiles Vorgehen

--- a/Documentation/Report/Parts/Toolchain.tex
+++ b/Documentation/Report/Parts/Toolchain.tex
@@ -2,18 +2,20 @@
 Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools angewiesen sein würden. So musste unser Quelltext versioniert, die grobe Struktur und Views festgehalten und Aufgabenpakete erstellt und koordiniert werden. Darüber hinaus war uns auch Design und Qualität wichtig. Auf unsere Erfahrungen in diesem Zusammenhang gehen wir im folgenden Abschnitt ein.
 
 \subsection{Agiles Vorgehen im Projekt}
-PivotalTracker + Scrum
-\begin{figure}
+	Da uns freundlicherweise von C1 WPS die Möglichkeit gegeben wurde, eine Scrum-Zertifizierung zu erhalten, lag uns viel daran, den Scrum-Ansatz so gut es ging in unseren Projekt-Ablauf zu integrieren. Dazu verwenden wir die Software PivotalTracker, in der wir zum einen, wie in Abbildung \ref{fig:TrackerStories} dargestellt, einzelne Stories administrieren können,
+\begin{figure}[h!]
 	\centering
 	\includegraphics[scale=.3]{Pictures/TrackerStories}
-	\label{fig:TrackerStories}
-	\caption{Stories in PivotalTracker}
+	\vspace{-.8cm}
+	\caption{Stories in PivotalTracker\label{fig:TrackerStories}}
 \end{figure}
-\begin{figure}
+zum anderen allerdings auch Burndown-Charts, welche für das Vorgehen während der Scrum-Iterationen unabdinglich sind. Denn so können wir den Fortschritt unserer App messen und haben ein Monitoring für die Entwicklung unserer Features, wie in Abbildung \ref{fig:TrackerBurndown} zu sehen ist.
+
+\begin{figure}[h]
 	\centering
 	\includegraphics[scale=.3]{Pictures/TrackerBurndown}
-	\label{fig:TrackerBurndown}
-	\caption{Burndown-Chart in PivotalTracker}
+	\vspace{-.8cm}
+	\caption{Burndown-Chart in PivotalTracker\label{fig:TrackerBurndown}}
 \end{figure}
 
 \subsection{Quelltextversionierung}
