Bericht: Linespread im Quelltext reduziert

--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -53,7 +53,7 @@
 	morekeywords={new,@,},
 	backgroundcolor=\color{black!3},
 	columns=fullflexible,
-	basicstyle=\ttfamily\footnotesize,
+	basicstyle=\linespread{0.94}\ttfamily\footnotesize,
 	keywordstyle=\bfseries\ttfamily\color{blue!50!red!80!black},
 	stringstyle=\color{red!70!black}\ttfamily,
 	identifierstyle=\ttfamily\itshape,
