--- a/Documentation/Report/Parts/Idee.tex
+++ b/Documentation/Report/Parts/Idee.tex
@@ -18,8 +18,7 @@ Schließlich entstand die Vision einer Anwendung, die nicht versucht, aus einer 
 
 Als Kernprodukte und Kompetenzen haben wir das klassische Sparbuch, die Anlageberatung sowie die Finanzierung ausgemacht. Das Sparbuch bietet scheinbar keine Funktionalität, die einen konkreten Vorteil gegenüber beispielsweise dem Tagesgeldkonto einer Direktbank hätte. Wie aber einführend erläutert, ist dies nicht ausschlaggebend. Denn ungeachtet seiner Nachteile ist das Sparbuch populär; vielleicht auch, weil in den Verwerfungen der europäischen Finanzkrise hier besondere Sicherheit vermutet wird. Tatsächlich ist aber ein Tagesgeldkonto bei einer Direktbank ebenso über die Einlagensicherung geschützt wie ein Sparbuch\footnote{vgl. Einlagensicherungs- und Anlegerentschädigungsgesetz}.
 
-Diesem Sicherheitsbedürfnis der Kunden wollten wir dabei konsequent nicht nur in der kryptographischen Theorie, sondern auch mit Rücksicht auf die vom Kunden wahrgenommene Sicherheit gerecht werden - etwa durch bestimmte visuelle Elemente, die mit Sicherheit assoziiert werden.
-
+Diesem Sicherheitsbedürfnis der Kunden wollten wir dabei konsequent nicht nur in der kryptographischen Theorie, sondern auch mit Rücksicht auf die vom Kunden wahrgenommene Sicherheit gerecht werden - etwa durch in der App prominente visuelle Elemente, die mit Sicherheit assoziiert werden.
 
 
 \subsection{Name}
