--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -53,7 +53,7 @@
 	morekeywords={new,@,},
 	backgroundcolor=\color{black!3},
 	columns=fullflexible,
-	basicstyle=\linespread{0.94}\ttfamily\footnotesize,
+	basicstyle=\ttfamily\footnotesize,
 	keywordstyle=\bfseries\ttfamily\color{blue!50!red!80!black},
 	stringstyle=\color{red!70!black}\ttfamily,
 	identifierstyle=\ttfamily\itshape,
@@ -205,7 +205,7 @@
 \input{Parts/Qualitaetssicherung}
 \input{Parts/Fazit}
 \newpage
-\renewcommand{\currentAuthor}{black}
+\renewcommand{\currentAuthor}{kiba}
 
 %===============================================================================
 % Acronyms
@@ -218,6 +218,7 @@
 	\acro{REST}{Representational State Transfer}
 	\acro{SOAP}{Simple Object Access Protocol}
 \end{acronym}
+\newpage
 
 %===============================================================================
 % Figures
