--- a/Documentation/Report/Parts/Idee.tex
+++ b/Documentation/Report/Parts/Idee.tex
@@ -50,6 +50,6 @@ Im Zuge der Plenumsdiskussionen und anschließenden internen Debatten haben wir 
 Wie oben erläutert, besteht von Filialbanken besteht in der Finanzierung, etwa für Eigenheime. Im Zentrum unserer Überlegungen stand dann auch die Frage, wie eine App dabei helfen kann, diese Dienstleistung für den Endkunden zu verbessern. Im Ergebnis möchten wir einen individualisierten Kreditrechner anbieten, der den App-Benutzer in die Lage versetzt, mittels individuell berechneter Profildaten für sich selbst Finanzierungsrechnungen durchzuführen. Die Idee dahinter ist, dass ein Kunde zunächst für sich selbst einige Finanzierungsvarianten durchspielen kann. Hat er sich eine Variante überlegt, kann ein Termin mit dem persönlichen Berater vereinbart werden und dabei optional gleich der Finanzierungsvorschlag exportiert werden. Im Filialgespräch kann der Berater dann noch individuelle Ratschläge bezüglich Laufzeit und Umfang einer Finanzierung geben. Wichtig dabei ist, dass die angebotenen Finanzierungsdaten  mit Rücksicht auf die der Bank zur Verfügung stehenden Informationen so konservativ gewählt sind, dass jedes berechnete Angebot auch vom Kunden angenommen werden kann.
  
 \subsubsection{Weitere Funktionen}
-    Als Startbildschirm nach dem Login ist für die App ein Dashboard vorgesehen, das einen graphischen Überblick über Vermögensverlauf und Transaktionen bereitstellt. Hilfreich war hier die Überlegung, dass die meisten Benutzer ihren Kontostand grob kennen und weniger an einer Zahl als vielmehr an den Entwicklungen interessiert sind. Zudem gibt es einen Nachrichtenbereich, in dem die Antworten auf beispielsweise Terminanfragen abgelegt werden.
+    Als Startbildschirm nach dem Login ist für die App ein Dashboard vorgesehen, das einen graphischen Überblick über Vermögensverlauf und Transaktionen bereitstellt. Hilfreich war hier die Überlegung, dass die meisten Benutzer ihren Kontostand grob kennen und weniger an einer Zahl als vielmehr an den Entwicklungen interessiert sind. Zudem gibt es einen Nachrichtenbereich, in dem die Antworten auf beispielsweise Terminanfragen abgelegt werden. Einfache Überweisungen können ebenfalls getätigt werden, schlicht, weil dies unserer Ansicht nach von einer Bankanwendung erwartet wird.
     
 
