--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -77,7 +77,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \linespread{1.5}
 \geometry{a4paper}
-\geometry{left=25mm,right=25mm,bottom=30mm,top=30mm}
+\geometry{left=25mm,right=25mm,bottom=35mm,top=30mm}
 \geometry{footnotesep=10mm}
 \geometry{headsep=10mm}
 \geometry{head=10mm}
@@ -146,7 +146,7 @@
 %===============================================================================
 \titleformat{\section}[hang]{\Large\sffamily\bfseries\color{\currentAuthor}}{\thesection\quad}{0pt}{}
 \titleformat{\subsection}[hang]{\large\sffamily\itshape}{\thesubsection\quad}{0pt}{}
-\titleformat{\subsubsection}[hang]{\large\sffamily}{\thesubsection\quad}{0pt}{}
+\titleformat{\subsubsection}[hang]{\large\sffamily}{\thesubsubsection\quad}{0pt}{}
 
 %===============================================================================
 % Table of Contents
@@ -217,6 +217,7 @@
 	\acro{DAO}{Data Access Object}
 	\acro{REST}{Representational State Transfer}
 	\acro{SOAP}{Simple Object Access Protocol}
+	\acro{VCS}{Version Control System (Versionsverwaltung)}
 \end{acronym}
 \newpage
 
